--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,14 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
+.fonte{
+  font-family: 'MedievalSharp', cursive;
+  word-spacing: 1%;
+}
+
 body {
   background: #fff;
   color: #003333;
@@ -523,8 +531,8 @@ h6 {
 #hero h1 {
   color: #fff;
   font-family: "Raleway", sans-serif;
-  font-size: 56px;
-  font-weight: 600;
+  font-size: 80px;
+  font-weight: 550;
   text-transform: uppercase;
 }
 
@@ -1515,7 +1523,7 @@ h6 {
 }
 
 #footer .footer-top .footer-info img {
-  height: 40px;
+  height: 80px;
   margin-bottom: 10px;
 }
 
@@ -1641,4 +1649,8 @@ h6 {
 
 .creditos-finais{
   color: #fff;
+}
+
+.pad-item{
+  padding: 1%;
 }
