--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,7 +486,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/inicial.jpg) top center;
+  background: url(../img/inicial.jpeg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -947,7 +947,7 @@ h6 {
 }
 
 #venue .venue-info {
-  background: url("../img/venue-info-bg.jpg") top center no-repeat;
+  background: url("../img/lealdade-bg.jpeg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 60px;
