--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,8 @@ h6 {
 #header #logo img {
   padding: 0;
   margin: 0;
-  max-height: 80px;
+  max-width: 100%;
+  max-height: 120px;
 }
 
 @media (max-width: 992px) {
@@ -1523,7 +1524,8 @@ h6 {
 }
 
 #footer .footer-top .footer-info img {
-  height: 80px;
+  max-width: 100%;
+  max-height: 100px;
   margin-bottom: 10px;
 }
 
