mudança barra de rolagem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1656,3 +1656,14 @@ h6 {
 .pad-item{
   padding: 1%;
 }
+
+html ::-webkit-scrollbar {
+  width: 10px;
+}
+html ::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background: #00a251d0;
+}
+html ::-webkit-scrollbar-track {
+  background: #ededed7d;
+}
